# o3d_test

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  rgbd_odometry.pro
libs/: eigen_libs.cmake  libs.cmake  open3d_libs.cmake  opencv_libs.cmake  pcl_libs.cmake
scripts/: build.sh  refresh.sh  update_submodules.sh  zip_project.sh
src/: main.cpp  src.cmake
src/defs/: README.md  defs.cmake  defs.cpp  defs.hpp
src/utils/: argparser.hpp  timer.hpp  utils.cmake
